--- a/mobile_app/analysis_options.yaml
+++ b/mobile_app/analysis_options.yaml
@@ -22,6 +22,10 @@ linter:
   # `// ignore_for_file: name_of_lint` syntax on the line or in the file
   # producing the lint.
   rules:
+    require_trailing_commas: true
+    omit_local_variable_types: true
+    prefer_single_quotes: true
+    
     # avoid_print: false  # Uncomment to disable the `avoid_print` rule
     # prefer_single_quotes: true  # Uncomment to enable the `prefer_single_quotes` rule
 
